--- a/java/build.gradle
+++ b/java/build.gradle
@@ -14,4 +14,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.alibaba:fastjson:1.1.61.android'
+    compile 'com.google.protobuf:protobuf-java:3.4.0'
+
 }
