--- a/java/build.gradle
+++ b/java/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     compile 'com.alibaba:fastjson:1.1.61.android'
+    // https://mvnrepository.com/artifact/com.github.davidmoten/flatbuffers-java
+    compile group: 'com.github.davidmoten', name: 'flatbuffers-java', version: '1.8.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'com.google.protobuf:protobuf-java:3.4.0'
     testCompile 'com.googlecode.protobuf-java-format:protobuf-java-format:1.4'
