--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 0.2/java/build/reports/
 0.2/java/build/
 0.2/java/.gradle/
+
+
+
+WsonTest/cmake-build-debug/
+java/build/classes
+java/build/reports/
+java/build/
+java/.gradle/
